Change tags, favicon, and pdf upload

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="Theory of Human Tetrachromatic Color Experience and Printing ACM Transactions on Graphics (SIGGRAPH '24) Paper">
   <meta property="og:title" content="Theory of Human Tetrachromatic Color Experience and Printing"/>
-  <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/>
+  <meta property="og:description" content="We apply d-dimensional color theory to compute the predicted hue sphere of human tetrachromatic color space for the first time and derive the ideal, CMY-equivalent, tetrachromatic printing primaries. Our prototype tetrachromatic printer utilizes 4 selected fountain pen inks to print color tests to identify and characterize tetrachromacy in the wild."/>
   <meta property="og:url" content="URL_HERE"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/image/your_banner_image.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
-
-  <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG">
+  <!-- Twitter Stuff -->
+  <!-- <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG">
   <meta name="twitter:description" content="TWITTER BANNER DESCRIPTION META TAG">
-  <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
   <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary_large_image"> -->
+
   <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
+  <meta name="keywords" content="tetrachromacy theory printing color perception">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -83,7 +83,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="static/pdfs/Lee_TheoryofTet_v1.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -310,7 +310,7 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-        @article{leeTetrachromacy2024,
+        @article{LeeTetrachromacy2024,
           author = {Lee, Jessica and Jennings, Nicholas and Srivastava, Varun and Ng, Ren},
           title = {Theory of Human Tetrachromatic Color Experience and Printing},
           year = {2024},
