--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="description" content="Theory of Human Tetrachromatic Color Experience and Printing ACM Transactions on Graphics (SIGGRAPH '24) Paper">
   <meta property="og:title" content="Theory of Human Tetrachromatic Color Experience and Printing"/>
   <meta property="og:description" content="We apply d-dimensional color theory to compute the predicted hue sphere of human tetrachromatic color space for the first time and derive the ideal, CMY-equivalent, tetrachromatic printing primaries. Our prototype tetrachromatic printer utilizes 4 selected fountain pen inks to print color tests to identify and characterize tetrachromacy in the wild."/>
-  <meta property="og:url" content="URL_HERE"/>
+  <meta property="og:url" content="https://imjal.github.io/theory-of-tetrachromacy/"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
+  <!-- TODO: add banner image-->
   <meta property="og:image" content="static/image/your_banner_image.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
@@ -66,7 +67,7 @@
                   <a href="https://nicholasjj.github.io/" target="_blank">Nicholas Jennings, </a>
                   </span>
                   <span class="author-block">
-                    Varun Srivastava, 
+                    <a href="https://github.com/VarunNSrivastava" target="_blank">Varun Srivastava, </a>
                   </span>
                   <span class="author-block">
                     <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/yirenng.html" target="_blank">Ren Ng</a>
