update with best paper honorable mention

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">University of California, Berkeley<br>ACM Transactions on Graphics (Proceedings of SIGGRAPH '24)
+                    <span class="author-block">University of California, Berkeley<br>
+                      ACM Transactions on Graphics (Proceedings of SIGGRAPH '24)<br>
+                      Best Paper Honorable Mention
                     </span>
                     <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
